--- a/index.html
+++ b/index.html
@@ -93,7 +93,31 @@
     </section>
 
     <footer>
-        <div class="cajafooter" id="footer"></div>
+        
+            <div class="cajafooter" id="footer">
+
+                <div class="textfooter">
+                <h2>contactos</h2>
+                <a href="mailto:kevinarguello5@hotmail.com?subject=Estoy%20interesado%20en%20sus%20servicios" class="btn-3">Mail</a>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+
+                </div>
+                <div class="textfooter">
+                <h2>conten</h2>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                </div>
+
+                <div class="textfooter">
+                <h2>redes</h2>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                </div>
+                
+            </div>
     </footer>
 
   
